Added GUI for FEM_II

--- a/Odin_Control_Adapter/config/emulator.cfg
+++ b/Odin_Control_Adapter/config/emulator.cfg
@@ -3,7 +3,7 @@ debug_mode = 1
 http_port = 8070
 http_addr = 127.0.0.1
 static_path = ./static
-adapters = fem
+adapters = fem, file
 
 [tornado]
 logging = debug
@@ -12,3 +12,6 @@ logging = debug
 module = femii.FemAdapter.FemAdapter
 emulator_enable = 1
 emulator_refresh_interval = 5.0
+
+[adapter.file]
+module = femii.FileAdapter.FileAdapter
