Edits towards Flake8 Compliance

--- a/Odin_Control_Adapter/config/fem.cfg
+++ b/Odin_Control_Adapter/config/fem.cfg
@@ -10,9 +10,8 @@ logging = debug
 
 [adapter.fem]
 module = femii.FemAdapter.FemAdapter
-emulator_enable = 1
-emulator_refresh_interval = 5.0
+emulator_enable = 0
 
 [adapter.file]
 module = femii.FileAdapter.FileAdapter
-fpga_location = fpga
+fpga_location = root/fpga
