--- a/.gitmodules
+++ b/.gitmodules
@@ -19,8 +19,18 @@
 [submodule "xilinx-uboot"]
         path = out_femii_linux/xilinx-uboot
         url = https://github.com/enclustra-bsp/xilinx-uboot
-
-
 [submodule "out_stfc_femii_MMC"]
 	path = out_stfc_femii_MMC
 	url = git@github.com:stfc-aeg/out_stfc_femii_MMC.git
+[submodule "femii-odin-control"]
+	path = bsp-xilinx/out_stfc_femii_MMC/overlays/usr/femii/femii-odin-control
+	url = git@github.com:stfc-aeg/femii-odin-control.git
+[submodule "buildroot-rootfs"]
+	path = bsp-xilinx/out_stfc_femii_MMC/buildroot-rootfs
+	url = git@github.com:stfc-aeg/buildroot-rootfs.git
+[submodule "xilinx-linux"]
+	path = bsp-xilinx/out_stfc_femii_MMC/xilinx-linux
+	url = git@github.com:enclustra-bsp/xilinx-linux.git
+[submodule "xilinx-uboot"]
+	path = bsp-xilinx/out_stfc_femii_MMC/xilinx-uboot
+	url = git@github.com:enclustra-bsp/xilinx-uboot.git
